crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__complete_nullary_constr.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Constr 59 [])) of
  DataI unused#31 -> trace "nullary_constr" in 0
  DataB unused#32 -> trace "nullary_constr" in 1
  DataList unused#33 -> trace "nullary_constr" in 2
  DataMap unused#34 -> trace "nullary_constr" in 4
  DataConstr unused#35 -> trace "nullary_constr" in 6
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_36
    (force
      [[[[[[(force (builtin chooseData)) generated_36]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 1))]))]))
    (con data (Constr 59 []))])
--- optimized Core
case@Data (con data (Constr 59 [])) of
  DataI unused#1 -> trace "nullary_constr" in 0
  DataB unused#2 -> trace "nullary_constr" in 1
  DataList unused#3 -> trace "nullary_constr" in 2
  DataMap unused#4 -> trace "nullary_constr" in 4
  DataConstr unused#5 -> trace "nullary_constr" in 6
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam partial_14
        [(lam generated_11
          (force
            [[[[[[builtin_13 generated_11] (delay (force [partial_14 (delay (con integer 6))]))]
              (delay (force [partial_14 (delay (con integer 4))]))]
              (delay (force [partial_14 (delay (con integer 2))]))]
              (delay (force [partial_14 (delay (con integer 0))]))]
              (delay (force [partial_14 (delay (con integer 1))]))]))
          (con data (Constr 59 []))])
        [builtin_12 (con string "nullary_constr")]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Constr 59 [])) of
  DataI unused#31 -> trace "nullary_constr" in 0
  DataB unused#32 -> trace "nullary_constr" in 1
  DataList unused#33 -> trace "nullary_constr" in 2
  DataMap unused#34 -> trace "nullary_constr" in 4
  DataConstr unused#35 -> trace "nullary_constr" in 6
  _ -> error
--- isolated folded Core
let unused#35 : pair int (list Data) = (con (pair integer (list data)) (59, [])) in
trace "nullary_constr" in 6
--- isolated cleaned Core
trace "nullary_constr" in 6
--- isolated UPLC before
(program 1.1.0
  [(lam generated_36
    (force
      [[[[[[(force (builtin chooseData)) generated_36]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 6))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 4))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 2))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 0))]))]
        (delay
          (force
            [[(force (builtin trace)) (con string "nullary_constr")]
              (delay (con integer 1))]))]))
    (con data (Constr 59 []))])
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "nullary_constr")]
      (delay (con integer 6))]))
--- result
(con integer 6)
--- logs
["nullary_constr"]
