crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_data__constr_missing.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_data.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data (con data (Constr 122 [I 42])) of
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_1
    (force
      [[[[[[(force (builtin chooseData)) generated_1] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (con data (Constr 122 [I 42]))])
--- optimized Core
case@Data (con data (Constr 122 [I 42])) of
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam generated_1
      (force
        [[[[[[builtin_2 generated_1] (delay (error))] (delay (error))] (delay (error))]
          (delay (error))]
          (delay (error))]))
      (con data (Constr 122 [I 42]))])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
case@Data (con data (Constr 122 [I 42])) of
--- isolated folded Core
error
--- isolated cleaned Core
error
--- isolated UPLC before
(program 1.1.0
  [(lam generated_1
    (force
      [[[[[[(force (builtin chooseData)) generated_1] (delay (error))] (delay (error))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    (con data (Constr 122 [I 42]))])
--- isolated UPLC after
(program 1.1.0 (error))
--- result
error: ExplicitErrorTerm
--- logs
[]
